--- a/css/style.css
+++ b/css/style.css
@@ -203,3 +203,53 @@ nav li:hover {
     }
 }
 
+
+
+
+
+form {
+    
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 100px;
+    background: #fff;
+    border-radius: 5px;
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+    color: #14213d;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="date"],
+textarea {
+    width: 96%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+
+
+input[type="submit"] {
+    background-color: #14213d;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #14213d94;
+}
+
+input[type="submit"]:focus {
+    outline: none;
+}
